autmated mrt checks

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -54,6 +54,7 @@
 /etc/www/html/www1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www1/private IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/www/html/phaey1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/secure IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/testhttp IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/update-motd.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
