added the protocols lmtp, and the certificate reference. Also changed to mail_location (location where the mails are of each user). And finaly fixed my imap auth problem by removing a / in the base_dir line

--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -1,19 +1,23 @@
 auth_mechanisms = plain cram-md5
 auth_verbose = yes
-base_dir = /var/run/dovecot/
+base_dir = /var/run/dovecot
 info_log_path = /var/log/dovecot.info
 log_path = /var/log/dovecot
 log_timestamp = "%Y-%m-%d %H:%M:%S "
-mail_location = maildir:/var/vmail/%d/%n
+mail_location = maildir:/var/vmail/%n
 auth_debug_passwords=yes
 passdb {
   args = /etc/dovecot/passwd
   driver = passwd-file
+  default_fields = userdb_imapc_user=%u userdb_imapc_password=%w
 }
-protocols = imap pop3
+protocols = imap pop3 lmtp
 service auth {
-  executable = /usr/lib/dovecot/auth
-  user = root
+  unix_listener /var/spool/postfix/private/auth {
+    group = postfix
+    mode = 0660
+    user = postfix
+  }
 }
 service imap-login {
   chroot = login
@@ -31,12 +35,21 @@ service pop3-login {
 service pop3 {
   executable = /usr/lib/dovecot/pop3
 }
-ssl = no
+ssl = yes
+ssl_cert = </etc/ssl/certs/mailcert.pem
+ssl_key = </etc/ssl/private/mail.key
 userdb {
   args = /etc/dovecot/users
   driver = passwd-file
 }
-valid_chroot_dirs = /var/spool/vmail
-protocol pop3 {
-  pop3_uidl_format = %08Xu%08Xv
+service lmtp {
+	unix_listener /var/spool/postfix/dovecot-lmtp {
+	group = postfix
+	mode = 0600
+	user = postfix
+	}
+}
+protocol lmtp {
+	postmaster_address=user1@quinten-nouters.sb.uclllabs.be
+	hostname=mx.quinten-nouters.sb.uclllabs.be
 }
