--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -57,6 +57,7 @@
 /etc/www/html/phaey1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/secure IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/testhttp IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/www/html/ohg8um IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/update-motd.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc6.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
